--- a/main.html
+++ b/main.html
@@ -1,6 +1,7 @@
 <HTML> 
     <HEAD>
         데이터베이스 기말과제 팀프로젝트 웹사이트창 
+        <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="style.css"
     </HEAD>
     
@@ -18,9 +19,9 @@
 
                     </div>
                 <ul class="nav">
-                    <li><a href="#">새 프로젝트 작성</a></li>
-                    <li><a href="#">기존 프로젝트 수정</a></li>
-                    <li><a href="#">기존 프로젝트 삭제</a></li>
+                    <li><a href="insert.php">새 프로젝트 작성</a></li>
+                    <li><a href="update.php">기존 프로젝트 수정</a></li>
+                    <li><a href="delete.php">기존 프로젝트 삭제</a></li>
                 </ul>
 
                 </div>
