--- a/main.html
+++ b/main.html
@@ -2,7 +2,7 @@
     <HEAD>
         <title>데이터베이스 기말과제 팀프로젝트 웹사이트창</title>
         <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap" rel="stylesheet">
-        <link rel="stylesheet" type="text/css" href="style.css"
+        <link rel="stylesheet" type="text/css" href="style.css">
         <META http-equiv="content-type" content="text/html; charset=utf-8">
     </HEAD>
     
